copy of loading.jsx, added css class to html

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,10 @@
   border: 2.5px solid red;
 }
 
+html {
+  touch-action: manipulation;
+}
+
 /* :root {
   --background: #ffffff;
   --foreground: #171717;
